<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <!-- TODO: write views (to enter quantity and to enter expiration date)
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receiveProductLayout"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productPropmt"
            android:textSize="18sp"
            android:text="@string/Product"/>

        <Spinner
            android:id="@+id/product_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receiveSupplierLayout"
        android:orientation="vertical"
        android:layout_below="@+id/receiveProductLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/supplierPropmt"
            android:textSize="18sp"
            android:text="@string/Supplier"/>

        <Spinner
            android:id="@+id/supplier_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receiveQuantityLayout"
        android:orientation="vertical"
        android:layout_below="@id/receiveSupplierLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantityPrompt"
            android:text="@string/Quantity"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantityEdit"
            android:background="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/confirmLayout"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmContinueButton"
            android:text="@string/Continue"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmConfirmButton"
            android:text="@string/submit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ConfirmCancelButton"
            android:text="@string/Cancel"/>
    </LinearLayout>

</RelativeLayout>