<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <!-- TODO: "Welcome to (companyName)!", fields to enter user credentials and submit button-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/companyNameText"
        android:textSize="32sp">
    </TextView>

    <!--Company name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/companyNameText"
        android:layout_above="@id/usernamePrompt"
        android:textSize="32sp">

    </TextView>
    <!--Username-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/usernamePrompt"
        android:text="@string/usernamePropmt"
        android:layout_alignLeft="@id/usernameEdit"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEdit"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernamePrompt"
        android:textSize="18sp"/>

    <!--Password-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEdit"
        android:id="@+id/passwordPropmt"
        android:text="@string/passwordPropmt"
        android:layout_alignLeft="@id/usernameEdit"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEdit"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordPropmt"
        android:textSize="18sp"/>

    <!--Submit button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginSubmitButton"
        android:textSize="18sp"
        android:text="@string/submit"
        android:layout_below="@id/passwordEdit"
        android:layout_alignLeft="@id/passwordEdit"/>

    <!--Error text-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginErrorText"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/red"
        android:background="@color/white"/>



</RelativeLayout>